Fixed image display on mobile and tablet

--- a/main.scss
+++ b/main.scss
@@ -279,9 +279,11 @@ img, button:focus {
     margin-left: 20px;
     height: calc(100vh - 250px);
     text-align: center;
-
+    display: flex;
+    align-items: center;
     span, img {
-      height: 100%;
+      max-width: 100%;
+      max-height: 100%;
       vertical-align: middle;
     }
 
